--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,39 +1,79 @@
-/*-----最上方nav導覽列---------------------------*/
 .topbar {
-    height: map-get($heights, nav);
-}
+  height: map-get($heights, nav);
+  float: right;
+ }
+
 #logo {
-    height: 36px;
+  height: map-get($heights, nav);
+  margin-left: 1%;
+ 
 
 }
+
 .topbar li {
-    list-style: none;
-    float: left;
+  list-style: none;
+  display: inline-block;
 
 }
+
 .topbar li a {
-    padding: 25px;
+  padding: 25px;
+  text-decoration: none;
+  color: #666666;
+  line-height: map-get($heights, nav);
+  font-size: 18px;
 }
 
 /*-----header banner 手機版型----------------------*/
 header {
-    height: map-get($heights, header);
-    width: 100%;
-    margin: auto;
-    // background-image: url(../images/banner.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: map-get($colors, primary);
-}
-/*-----header banner 平板版型----------------------*/
-@media (min-width: 768px) { 
-    header {background-image: url(../images/banner_bg.jpg);}
-}
-/*-----header banner 桌機版型----------------------*/
-@media (min-width: 1300px) { 
-    header {background-position: center top; background-size: auto;}
-}
-header h1 {
-    text-indent: -9999px;
+  background-image: url(../images/banner_bg2.jpg);
+  height: map-get($heights, header);
+  width: 100%;
+  margin: auto;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: map-get($colors, primary);
+  position: relative;   //為了下方的弧形造型可以定位
 }
 
+/*-----header banner 平板版型----------------------*/
+@media (min-width: 768px) {
+  header {
+    background-image: url(../images/banner_bg.jpg);
+  }
+}
+
+/*-----header banner 桌機版型----------------------*/
+@media (min-width: 1300px) {
+  header {
+    background-position: center top;
+    background-size: auto;
+  }
+}
+
+header img{
+  max-width: 630px;
+  width: 300px;
+  width: 60vw;
+  display: block;
+  padding-bottom: 5%;
+  padding-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+
+// header和.info間的弧形-----------------
+header::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: -1px;
+    display: block;
+    background-image: url(../images/curve_header.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
