--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,8 @@
 @import "var";
 // @import "curve";
+@import "text";
 @import "header";
 @import "footer";
 @import "contents";
 
-// text要放最後比較保險(要覆蓋p的設定)
-@import "text";
+@import "rwd";
