--- a/scss/_contents.scss
+++ b/scss/_contents.scss
@@ -1,10 +1,10 @@
-// --測試用，之後刪除-------------------------
+// ==測試用，之後刪除=========================
 // @each $area,$height in $heights {
 //     .#{$area} {
 //         min-height: $height;
 //     }
 // }
-// -----------------------------------------
+// ==========================================
 
 
 * {
@@ -17,23 +17,28 @@
     max-width: $container_h;
     margin: 0 auto;
     padding: 0 3% 5%;
+    // box-sizing: border-box;
 }
 .container>div {
         display: inline-block;
+        vertical-align: middle;
         text-align: center;
         margin:3%;
-
+}
+// 弧形造型設定---------------------------
+.info, .content1, .content2, .content3,{
+	background-repeat: no-repeat;
+    background-position: bottom -1px center;
+    background-size: 100%;
 }
 
-
-// -----課程資訊-----------------------------
+// =====課程資訊=============================
 .info {
     background-color: map-get($colors, light);
     background-image: url(../images/curve_info.svg);
-    background-repeat: no-repeat;
-    background-position: bottom -1px center;
-    background-size: 100%;
-    padding: 30px 0;
+    // padding: 30px 0;
+	padding-bottom: 30px;
+
     // -----白色圓角區塊----------------------
     .container>div {
         background-color: #fff;
@@ -44,21 +49,21 @@
         h3 {
             background-color: map-get($colors, dark);
             font-weight: normal;
+            letter-spacing: 0.15em;
         }
         // 課程名稱&資訊----------------------
-        p {padding: 10px 50px;}
+        p {padding: 3px 50px;}
+        p:first-of-type {padding: 25px 50px;}
     }
     // -----黃色箭頭---------------------------
-    img {padding-bottom: 120px;}
+    img {}
 }
-// -----課程資訊end--------------------------
-// -----課程優點-----------------------------
+// =====課程資訊end==========================
+
+// =====課程優點=============================
 .content1 {
     background-color: map-get($colors, second);
     background-image: url(../images/curve_content1.svg);
-    background-repeat: no-repeat;
-    background-position: bottom -1px center;
-    background-size: 100%;
     .title {
         &::before {background-color: #333;}
         color: #333;
@@ -66,12 +71,13 @@
     // 各項優點的外框------------------------
     .container>div {
         position: relative;
-
+		//箭頭------------------------------
         img:first-of-type {
             position: absolute;
             left: -5px;
             z-index: 1;
         }
+        //圖示------------------------------
         img:last-of-type {
             position: relative;
             top: 20px;
@@ -82,74 +88,193 @@
             background-color: map-get($colors, second_light);
             padding: 40px 29px;
             border-radius: 150px;
-            height: 200px;
+            height: 190px;
             width: 250px;
             position: relative;
             top: -50px;
             p {
-                padding-top: 20px;
+                padding-top: 25px;
             }
         }
     }
 }
-// -----課程優點end--------------------------
-// -----老師及課程介紹------------------------
+@media (max-width: 1230px) {
+	// .content1 .container {padding: 1%;}
+	// .content1 .container>div {
+	// 	margin: 2.5%;
+	// }
+}
+// =====課程優點end=========================
+
+// =====老師及課程介紹=======================
 .content2 {
     background-color: map-get($colors, note);
     background-image: url(../images/curve_content2.svg);
-    background-repeat: no-repeat;
-    background-position: bottom -1px center;
-    background-size: 100%;
     // 老師介紹的部分------------------------
-    img:first-child {
-        border-radius: 50%;
-        margin: 7%;
-        width: 26%;
-        float: left;
-    }
-    h3,ul,p {
-        float: left;
-        width: 60%;
-    }
-    ul {list-style: none;}
+	.container:first-child {
+		img {
+	        border-radius: 50%;
+	        margin: 6%;
+	        width: 23%;
+	        float: left;
+	    }
+	    h3,ul,p {
+	        float: left;
+	        width: 65%;
+	        padding: 10px;
+	        box-sizing: border-box;
 
+	    }
+	    h3 {margin-top: 30px;
+			font-size: 30px;
+			line-height: 1.5em;
+		}
+	    ul {
+	    	list-style: none;
+	    	font-weight: bold;
+	    }
+	}
     // 課程介紹的部分------------------------
-
-    .title {
-        &::before {
-            background-color: map-get($colors, primary);
-        }
-        color: map-get($colors, primary);
-        clear: both;
-    }
-    .container>h4 {
-        color: #333;
-    }
-    .container>div {
-        background-color: map-get($colors, primary);
-        width: 40%;
-        border-radius: 20px;
-        h4 {
-
-        }
-        img {   //VBA1.jpg~VBA4.jpg
-            width: 100%;
-        }
-    }
+	.container:last-child {
+		clear: both;
+	    .title {
+	        &::before {background-color: map-get($colors, primary);}
+	        color: map-get($colors, primary);        
+	    }
+	    >h4 {
+	        color: #333;
+	    	padding-left: 32px;
+	        margin-bottom: 10px;
+	    }
+	    p {
+	    	font-size: 24px;
+	    	padding-left: 32px;
+	    }
+	    div {
+	        background-color: map-get($colors, primary);
+	        width: 40%;
+	        border-radius: 20px;
+	        margin: 3% 5%;
+	        img {   //VBA1.jpg~VBA4.jpg
+	            width: 100%;
+	        }
+	        ul {
+	        	color: #FFF;
+	        	text-align: left;
+	        	padding: 20px 10px 20px 60px;
+	        }
+	    }
+	}
 }
 
-// -----老師及課程介紹end---------------------
-// -----適合對象------------------------------
+// =====老師及課程介紹end====================
+
+// =====適合對象=============================
 .content3 {
     background-color: map-get($colors, dark);
     background-image: url(../images/curve_content3.svg);
-    background-repeat: no-repeat;
-    background-position: bottom -1px center;
-    background-size: 100%;
+    min-height: map-get($heights, content3);
+	img {
+		margin: 150px 10% 0 6%;
+		float: left;
+		width: 39%;
+	}
+	h3,ul {
+		width: 45%;
+		float: left;
+	}
+	h3 {
+		margin-top: 70px;
+	}
+	ul {
+		// list-style-image: url(../images/checked_icon.svg);
+		// list-style-position: inside;
+		list-style: none;
+		li::before {
+			content: url(../images/checked_icon.svg);
+			position: relative;
+	        top: 6px;
+	        margin-right: 0.4em;
+		}
+		li {
+			font-size: 30px;
+			font-weight: bold;
+			color: #FFF;
+			margin-top: 25px;
+			p {
+				color: #FFF;
+				font-weight: normal;
+				margin-top: 15px;
+			}
+		}
+
+	}
 }
-// -----適合對象end---------------------------
-// -----索取資訊表單--------------------------
-form {
+// =====適合對象end==========================
+
+// =====索取資訊表單==========================
+.contact {
     background-color: #fff;
+    h3 {
+		font-size: 60px;
+		width: 800px;
+		margin: 60px auto;
+		line-height: 2em;
+		text-align: center;
+		background-color: #fff45c;
+		border-radius: 10px;
+		box-shadow: 0 11px #B7CFD1;
+
+
+    }
+    form {
+		width: 700px;
+		margin: 10px auto 200px;
+    }
+    #twzipcode input {display: none;}
+    input, .area {
+	width: 320px;
+    height: 48px;
+    // line-height: 48px;
+    font-size: 24px;
+    border: 1px solid map-get($colors, dark);
+    text-align: left;
+    padding-left: 10px;
+    margin: 14px;
+    box-sizing: border-box;
+	}
+	input::placeholder{color: map-get($colors, dark);}
+	.area {
+		color: map-get($colors, dark);
+	}
+	#contactEmail {
+		width: 668px;
+	}
+
+	#contactIAgree {
+		width: 25px;
+		// text-align: left;
+		// margin: 5px 14px;
+		float: left;
+	}
+	label, a {
+		font-size: 24px;
+		color: #333;
+		line-height: 3em;
+		float: left;
+	}
+	#submitBtn {
+		width: 147px;
+		height: 57px;
+		background-color: #ff6633;
+		border-radius: 10px;
+		color: #FFF;
+		letter-spacing: 10px;
+		padding-left: 45px;
+		margin-top: 70px;
+		border: none;
+		float: right;
+
+	}
 }
-// -----索取資訊表單end-----------------------
+// =====索取資訊表單end======================
