--- a/scss/_rwd.scss
+++ b/scss/_rwd.scss
@@ -1,15 +1,17 @@
+/*content1 & content3 間距縮小*/
+@media (max-width: 1220px) {
+	.content1 .container div {margin: 3% 2%;}
+
+}
 @media (max-width: 1023px) {
 	// .container {padding-bottom: 50px;}
 	.container>div {
-		margin: 5% 10%;
+		margin: 3% 10%;
 	}
 		// -----課程資訊-----------------------------
 	.info {
-
 	    // -----白色圓角區塊----------------------
-	    .container>div {
-			width: 80%;
-	    }
+	    .container>div {width: 80%;}
 	    // -----黃色箭頭---------------------------
 	    img {
 			transform: rotate(90deg);
@@ -22,15 +24,11 @@
 	// -----課程資訊end--------------------------
 	// -----課程優點-----------------------------
 	.content1 {
-
-	    
 	    // 各項優點的外框------------------------
 	    .container>div {
-			margin-left: auto;
 	    }
 	    // 優點內容的淺黃橢圓區塊-----------------
 	    .circle {
-
 	}
 	}
 
@@ -44,3 +42,14 @@
 	}
 	// -----索取資訊表單--------------------------
 }
+
+
+//嘗試info區塊在770~1023仍維持2欄排版
+// @media (max-width: 989px){
+//     .info .container>div {
+//         margin: 2%;
+//     }
+    // .info img {
+    //     width: 80px;
+    // }
+// }
