--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -2,7 +2,7 @@ $fontSizes: (
 	big_title: 48px,	//大標題字: 黃色的大標題(用在.info & .content3)
 	title1: 36px,	//作為醒目標題的文字: 前面有方塊的標題(用在.content1 & .content2)
 	title2: 30px,	//作為一般標題的文字: 深色主色的標題(用在.info & .content1)
-	small_title: 24px,	//刪除的標題文字(用在.content1)
+	small_title: 26px,	//刪除的標題文字(用在.content1)
 	text: 18px	//一般p的文字
 	);
 
@@ -12,21 +12,20 @@ p,ul {
     font-size: map-get($fontSizes, text);
     color: #333;
 	letter-spacing: 1px;
-	line-height: 1.8em;
+	line-height: 1.5em;
 }
 // 黃色的標題字-------------------------
 .title_yellow {
 	color: #feff00;
 	font-size: map-get($fontSizes, big_title);
 	font-weight: bold;
-	letter-spacing: 0.15em;
+	line-height: 1.5em;
 }
 // 深主色的重點文字----------------------
 .point {
 	color: map-get($colors, dark);
 	font-size: map-get($fontSizes, title2);
 	font-weight: bold;
-	line-height: 1.8em;
 }
 // 畫刪除線的文字------------------------
 .del {
@@ -48,7 +47,11 @@ p,ul {
     }
     font-size: map-get($fontSizes, title1);
     padding-top: 30px;
+    margin-bottom: 20px;
     line-height: 1.5em;
+    // position: relative;
+    // left: -0.8em;
+
 }
 
 h1 {
@@ -57,11 +60,7 @@ h1 {
     font-size: map-get($fontSizes, title2);
     color: #FFF;
 }
-// 老師介紹的老師名字(其他h3會被各自的class覆蓋過去)
-h3 {
-	font-size: 30px;
-	line-height: 1.5em;
-}
+
 // .content2中4個課程介紹方塊的標題
 h4 {
 	font-size: 32px;
