--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -26,11 +26,11 @@
 
 /*-----header banner 手機版型----------------------*/
 header {
-  background-image: url(../images/banner_bg2.jpg);
-  height: map-get($heights, header);
+  background-image: url(../images/banner_bgm.jpg);
+  height: auto;
   width: 100%;
   margin: auto;
-  background-size: contain;
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-color: map-get($colors, primary);
   position: relative;   //為了下方的弧形造型可以定位
@@ -39,29 +39,30 @@ header {
 /*-----header banner 平板版型----------------------*/
 @media (min-width: 768px) {
   header {
-    background-image: url(../images/banner_bg.jpg);
+    background-image: url(../images/banner_bgt.jpg);
+    background-size: cover;
+    background-position: center bottom;
   }
+  .topbar {display: none;}
 }
 
 /*-----header banner 桌機版型----------------------*/
 @media (min-width: 1300px) {
   header {
+    background-image: url(../images/banner_bg.jpg);
     background-position: center top;
     background-size: auto;
   }
 }
-
-header img{
-  max-width: 630px;
-  width: 300px;
-  width: 60vw;
-  display: block;
-  padding-bottom: 5%;
-  padding-top: 5%;
-  margin-left: auto;
-  margin-right: auto;
-
-}
+  header img {
+    max-width: 620px;
+    width: 300px;
+    width: 80vw;
+    display: block;
+    padding: 5% 0 350px 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 
 // header和.info間的弧形-----------------
