--- a/scss/_rwd.scss
+++ b/scss/_rwd.scss
@@ -3,7 +3,8 @@
 	.content1 .container div {margin: 3% 2%;}
 
 }
-@media (max-width: 1023px) {
+/*=====手機版=================================*/
+@media (max-width: 720px) {
 	// .container {padding-bottom: 50px;}
 	.container>div {
 		margin: 3% 10%;
