--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -2,9 +2,9 @@ $font_family: "Microsoft JhengHei UI", 微軟正黑體, sans-serif;
 $container_h: 1140px;
 $colors: (
 	primary: #2cbcc5,
-	light: #96dce9,
-	dark: #087b97,
-	second: #ffcb25,
+	light: #ebf9f9,
+	dark: #2a95af,
+	second: #ffe868,
 	second_light: #fffdcc,
 	note: #eaeaea
 	);
@@ -20,7 +20,7 @@ $colors: (
 );*/
 
 $heights: (
-	nav: 70px,
+	nav: 50px,
 	header: 750px,
 	info: 510px,
 	content1: 650px,
