--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,12 @@
 @import "var";
-// @import "curve";
 @import "text";
+@import "layout";
+// @import "curve";
 @import "header";
+@import "areaInfo";
+@import "areaContent1";
+@import "areaContent2";
+@import "areaContent3";
+@import "areaContact";
 @import "footer";
-@import "contents";
 
-@import "rwd";
