--- a/scss/_curve.scss
+++ b/scss/_curve.scss
@@ -1,16 +1,31 @@
-header, .info, .content1, .content3 {
-    position: relative;
+// 各個部分的對應弧形圖檔
+$areas: info, content1, content2, content3;
+@each $area in $areas {
+    .#{$area} {background-image: url(../images/curve_#{$area}.svg);}
 }
-.curve {
+// 弧形造型設定---------------------------
+.info, .content1, .content2, .content3,{
+	background-repeat: no-repeat;
+    background-position: bottom -1px center;
+    background-size: 100%;
+}
+
+// header和.info間的弧形-----------------
+header::after {
+    content: "";
+    width: 100%;
+    height: 100%;
     position: absolute;
     bottom: -1px;
-    width: 100%;
+    display: block;
+    background-image: url(../images/curve_header.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
 }
-html, body {width: 100%;}
-// header:before {
-//     // content: url(../source/hesder下方曲線.svg);
-//     display: block;
-//     width: 100%;
-//     min-height: 50px;
-//     // background-image: url(../source/hesder下方曲線.svg);
-// }
+
+// 視窗縮小 弧形造型弄扁一點-----------
+@media (max-width: 815px) {
+	header::after, .info, .content1, .content2, .content3 {background-size: 100% 30px;}
+	.info .container>div {margin: 3% 10%;}
+}
