--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,20 +2,14 @@
   height: map-get($heights, nav);
   float: right;
  }
-
 #logo {
   height: map-get($heights, nav);
   margin-left: 1%;
- 
-
 }
-
 .topbar li {
   list-style: none;
   display: inline-block;
-
 }
-
 .topbar li a {
   padding: 25px;
   text-decoration: none;
@@ -43,6 +37,8 @@ header {
     background-size: cover;
     background-position: center bottom;
   }
+}
+@media (max-width: 920px) {
   .topbar {display: none;}
 }
 
@@ -65,16 +61,22 @@ header {
   }
 
 
-// header和.info間的弧形-----------------
+// 下方三角形造型裝飾
 header::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    bottom: -1px;
-    display: block;
-    background-image: url(../images/curve_header.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  background-image: url(../images/header_triangle.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
+
+// 視窗縮小 弧形造型弄扁一點-----------
+// @media (max-width: 815px) {
+// header::after, .info, .content1, .content2, .content3 {background-size: 100% 30px;}
+// .info .container>div {margin: 3% 10%;}
+// }
