--- a/scss/_areaContent1.scss
+++ b/scss/_areaContent1.scss
@@ -27,7 +27,7 @@
             background-color: map-get($colors, second_light);
             padding: 40px 29px;
             border-radius: 10px;
-            height: 190px;
+            height: 150px;
             width: 250px;
             position: relative;
             top: -50px;
@@ -40,27 +40,27 @@
 
 /*=====RWD=================================*/
 @media (max-width: 1215px) {
-	.content1 .container {
-		text-align: justify;
-	}
-	// .content1 .container>div:nth-of-type(3) {
-	// 	display: block;
-	// 	margin: 0 auto 30px;
-	// }
-}
-// @media (max-width: 1110px) {
-// 	.content1 .container>div {margin: 3% 9%;}
+// 	.content1 .container {
+// 		text-align: justify;
+// 	}
+// 	// .content1 .container>div:nth-of-type(3) {
+// 	// 	display: block;
+// 	// 	margin: 0 auto 30px;
+// 	// }
 // }
-// @media (max-width: 1040px) {
-// 	.content1 .container>div {margin: 3% 7%;}
-// }
-// @media (max-width: 930px) {
-// 	.content1 .container>div {margin: 3% 5.5%;}
-// }
-// @media (max-width: 860px) {
-// 	.content1 .container>div {margin: 3% 4.1%;	}
-// }
-@media (max-width: 800px){
+// // @media (max-width: 1110px) {
+// // 	.content1 .container>div {margin: 3% 9%;}
+// // }
+// // @media (max-width: 1040px) {
+// // 	.content1 .container>div {margin: 3% 7%;}
+// // }
+// // @media (max-width: 930px) {
+// // 	.content1 .container>div {margin: 3% 5.5%;}
+// // }
+// // @media (max-width: 860px) {
+// // 	.content1 .container>div {margin: 3% 4.1%;	}
+// // }
+// @media (max-width: 800px){
 	.content1 {
 	min-height: 1320px;
 }
